复用git文件夹

--- a/app/src/main/res/layout/activity_opengl_demo11.xml
+++ b/app/src/main/res/layout/activity_opengl_demo11.xml
@@ -13,5 +13,20 @@
         android:text="切换"
         android:onClick="changeFilter"
         />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="拍照"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="56dp"
+        android:onClick="getPhoto"
+        />
+    <ImageView
+        android:id="@+id/img"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="true"
+        />
 
 </RelativeLayout>
