--- a/camerafilter/src/main/res/layout/activity_filter_image.xml
+++ b/camerafilter/src/main/res/layout/activity_filter_image.xml
@@ -9,30 +9,29 @@
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         />
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:id="@+id/img_filter"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:src="@drawable/img_filter"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
         android:elevation="5dp"
-        app:civ_fill_color="#ffffff"
         />
     <ImageView
         android:id="@+id/img_cancel"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:src="@drawable/img_cancel"
         android:layout_marginTop="50dp"
         android:layout_marginLeft="16dp"
         />
     <ImageView
         android:id="@+id/img_confirm"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:src="@drawable/img_confirm"
         android:layout_marginTop="50dp"
         android:layout_marginRight="16dp"
